# functional-lang

./: .doxyconf  CMakeLists.txt  README.md
docs/: annotated.html  classAnyExpr-members.html  classAnyExpr.html  classAtomExpr-members.html  classAtomExpr.html  classBiOpExpr-members.html  classBiOpExpr.html  classEnvironment-members.html  classEnvironment.html  classExpr-members.html  classExpr.html  classFunctionExpr-members.html  classFunctionExpr.html  classGCMain-members.html  classGCMain.html  classGCObj-members.html  classGCObj.html  classIdExpr-members.html  classIdExpr.html  classIfExpr-members.html  classIfExpr.html  classIntExpr-members.html  classIntExpr.html  classLambdaExpr-members.html  classLambdaExpr.html  classLetExpr-members.html  classLetExpr.html  classLexer-members.html  classLexer.html  classNumExpr-members.html  classNumExpr.html  classStackFrameObj-members.html  classStackFrameObj.html  classTokenPos-members.html  classTokenPos.html  classUnOpExpr-members.html  classUnOpExpr.html  classes.html  dir_b3285aee55a80b685968ee85e233e108.html  dir_d44c64559bbebec7f509842c48db8b23.html  (+22 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  (+6 more)
examples/: fib  numbers
include/func/: func.hpp  gc.hpp  global.hpp  lexer.hpp  parser.hpp  syntax.hpp
src/: func.cpp  gc.cpp  lexer.cpp  main.cpp  parser.cpp  primary_parser.cpp  primary_syntax.cpp  syntax.cpp  syntax_equals.cpp  syntax_eval.cpp  syntax_optimize.cpp  syntax_replace.cpp
test/: CMakeLists.txt  lexer.cpp  parser.cpp  slexer.cpp
